<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F3651"
    android:textAlignment="viewStart"
    tools:context=".backends.loginn">

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="39dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="175dp"
        android:layout_height="58dp"
        android:backgroundTint="#8EBBFF"
        android:onClick="LaunchSettings"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="347dp"
        android:layout_height="310dp"
        android:background="@drawable/lay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="194dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="81dp"
            android:layout_marginTop="231dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="14dp"
            android:backgroundTint="#8EBBFF"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="279dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="153dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="104dp"
            android:paddingStart="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_ripple"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="#49688d"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/username"
            android:layout_width="282dp"
            android:layout_height="54dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="200dp"
            android:autofillHints=""
            android:paddingStart="16dp"
            android:background="@drawable/edittext_ripple"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="#49688d"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/ivShowPassword"
            android:layout_width="27dp"
            android:layout_height="39dp"
            android:layout_alignEnd="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="287dp"
            android:layout_marginTop="159dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="112dp"
            android:contentDescription="@string/show_hide_password"
            app:srcCompat="@drawable/eyeepas" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="74dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="228dp"
            android:layout_marginBottom="255dp"
            android:text="Username:"
            android:textColor="@color/white"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="74dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="46dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="227dp"
            android:layout_marginBottom="159dp"
            android:text="Password:"
            android:textColor="@color/white"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="298dp"
        android:layout_height="203dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@drawable/balogo" />

</androidx.constraintlayout.widget.ConstraintLayout>